--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.2.0",
+        "ext-curl": "*"
     },
     "autoload": {
         "psr-0": {
-            "Browsewire\\HtmlToPdf": "src/"
+            "Browsewire": "src/"
         }
-    },
-    "minimum-stability": "stable"
+    }
 }
