--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         }
     ],
     "require": {
-        "php": ">=5.2.0",
-        "ext-curl": "*"
+        "php": ">=5.2.0"
     },
     "autoload": {
         "psr-0": {
